<resources>
    <string name="app_name">Tabbed Oefening</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_label_total_amount">Total amount:</string>
    <string name="txt_label_tip_amount">Amount to tip:</string>
    <string name="txt_label_size">Size of party</string>
    <string name="btn_show_money">SHOW ME THE MONEY!</string>
    <string name="txt_invoer_total_amount" />
    <string name="txt_invoer_amount_tip" />
    <string name="txt_invoer_size" />
    <string name="txt_label_answer" />
</resources>
