<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_light"
    tools:context=".fragments.BillFragment">

    <TextView
        android:id="@+id/tv_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="102dp"
        android:text="@string/txt_label_total_amount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_amount_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:text="@string/txt_label_tip_amount"
        app:layout_constraintEnd_toStartOf="@+id/et_amount_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_total_amount" />

    <TextView
        android:id="@+id/tv_size_part"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:text="@string/txt_label_size"
        app:layout_constraintEnd_toStartOf="@+id/et_size_party"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_amount_tip" />

    <EditText
        android:id="@+id/et_total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:ems="10"
        android:hint="15.00"
        android:inputType="numberDecimal"
        android:text="@string/txt_invoer_total_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_total_amount"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_amount_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:ems="10"
        android:hint="0"
        android:inputType="numberDecimal"
        android:text="@string/txt_invoer_amount_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_total_amount" />

    <EditText
        android:id="@+id/et_size_party"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:ems="10"
        android:hint="5"
        android:inputType="numberDecimal"
        android:text="@string/txt_invoer_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_amount_tip" />

    <Button
        android:id="@+id/btn_money"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/btn_show_money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_size_party" />

    <TextView
        android:id="@+id/tv_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="245dp"
        android:layout_marginLeft="245dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:text="@string/txt_label_answer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_money"
        tools:text="anwser  amount " />

</android.support.constraint.ConstraintLayout>